// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AnswerInput > Basic Rendering > renders interactive mode 1`] = `
<div>
  <div
    class="answerInput"
  >
    <div
      class="interactive"
    >
      <form>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary error"
          >
            <input
              class="textfield"
              data-testid="test-answer-input-textfield"
              id="answer-input"
              maxlength="20"
              minlength="1"
              name="answer-input"
              placeholder="Answer"
              type="text"
              value=""
            />
          </div>
          <div
            class="errorContainer"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-triangle-exclamation"
              data-icon="triangle-exclamation"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
                fill="currentColor"
              />
            </svg>
             
            This field is required
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindPrimary"
        >
          <button
            data-testid="test-submit-button-button"
            disabled=""
            id="submit-button"
            name="submit-button"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`AnswerInput > Basic Rendering > renders non-interactive mode with info box and without form controls 1`] = `
<div>
  <div
    class="answerInput"
  >
    <div
      style="display: flex; flex: 1 1 0%;"
    />
    <div
      class="nonInteractiveInfoBox"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-info"
        data-icon="circle-info"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
          fill="currentColor"
        />
      </svg>
      <span>
        Type an answer on your screen
      </span>
    </div>
  </div>
</div>
`;

exports[`AnswerInput > Basic Rendering > renders non-interactive mode with submitted answer 1`] = `
<div>
  <div
    class="answerInput"
  >
    <div
      class="interactive"
    >
      <form>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-answer-input-textfield"
              disabled=""
              id="answer-input"
              maxlength="20"
              minlength="1"
              name="answer-input"
              placeholder="Answer"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindPrimary"
        >
          <button
            data-testid="test-submit-button-button"
            disabled=""
            id="submit-button"
            name="submit-button"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`AnswerInput > Basic Rendering > renders with submitted answer 1`] = `
<div>
  <div
    class="answerInput"
  >
    <div
      class="interactive"
    >
      <form>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary disabled"
          >
            <input
              class="textfield"
              data-testid="test-answer-input-textfield"
              disabled=""
              id="answer-input"
              maxlength="20"
              minlength="1"
              name="answer-input"
              placeholder="Answer"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindPrimary"
        >
          <button
            data-testid="test-submit-button-button"
            disabled=""
            id="submit-button"
            name="submit-button"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`AnswerInput > renders interactive mode 1`] = `
<div>
  <div
    class="answerInput"
  >
    <div
      class="interactive"
    >
      <form>
        <div
          class="inputContainer"
        >
          <div
            class="textFieldInputContainer textFieldInputKindPrimary error"
          >
            <input
              class="textfield"
              data-testid="test-answer-input-textfield"
              id="answer-input"
              maxlength="20"
              minlength="1"
              name="answer-input"
              placeholder="Answer"
              type="text"
              value=""
            />
          </div>
          <div
            class="errorContainer"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-triangle-exclamation"
              data-icon="triangle-exclamation"
              data-prefix="fas"
              role="img"
              viewBox="0 0 512 512"
            >
              <path
                d="M256 0c14.7 0 28.2 8.1 35.2 21l216 400c6.7 12.4 6.4 27.4-.8 39.5S486.1 480 472 480L40 480c-14.1 0-27.2-7.4-34.4-19.5s-7.5-27.1-.8-39.5l216-400c7-12.9 20.5-21 35.2-21zm0 352a32 32 0 1 0 0 64 32 32 0 1 0 0-64zm0-192c-18.2 0-32.7 15.5-31.4 33.7l7.4 104c.9 12.5 11.4 22.3 23.9 22.3 12.6 0 23-9.7 23.9-22.3l7.4-104c1.3-18.2-13.1-33.7-31.4-33.7z"
                fill="currentColor"
              />
            </svg>
             
            This field is required
          </div>
        </div>
        <div
          class="buttonInputContainer buttonInputKindPrimary"
        >
          <button
            data-testid="test-submit-button-button"
            disabled=""
            id="submit-button"
            name="submit-button"
            type="submit"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`AnswerInput > renders non-interactive mode with info box and without form controls 1`] = `
<div>
  <div
    class="answerInput"
  >
    <div
      style="display: flex; flex: 1 1 0%;"
    />
    <div
      class="nonInteractiveInfoBox"
    >
      <svg
        aria-hidden="true"
        class="svg-inline--fa fa-circle-info"
        data-icon="circle-info"
        data-prefix="fas"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M256 512a256 256 0 1 0 0-512 256 256 0 1 0 0 512zM224 160a32 32 0 1 1 64 0 32 32 0 1 1 -64 0zm-8 64l48 0c13.3 0 24 10.7 24 24l0 88 8 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-80 0c-13.3 0-24-10.7-24-24s10.7-24 24-24l24 0 0-64-24 0c-13.3 0-24-10.7-24-24s10.7-24 24-24z"
          fill="currentColor"
        />
      </svg>
      <span>
        Type an answer on your screen
      </span>
    </div>
  </div>
</div>
`;
